----------------------------------
TICKET SERVER release notes
----------------------------------

todo
------
Backend
- Ciao albi, per il software il biglietto accompagnatore mettiamo 2 euro

- use org.h2.jdbcx.JdbcConnectionPool instead of BoneCP
- better define SmNamingStrategy
- refine GlobalExceptionHandler
- merge PurchaseDao and PurchaseDaoCustom in one DAO, deriving PurchaseDao from PurchaseDaoCustom
- TicketServiceImpl for Subscription apply Discount, instead of calculating it directly

Frontend 
- use timepicker in listTickets.html

v0.0.1 build 
-----------------------------
- added the Purchase, Discount and (Revenue) concepts 
- managed Subscription.progressiveNumber
