@@ -1,2 +1,2 @@
 echo "starting H2 DB"
-java -cp /Users/alagna/.m2/repository/com/h2database/h2/1.4.190/h2-1.4.190.jar org.h2.tools.Server -baseDir /Users/alagna/Documents/lavoro/clienti/biznology/progetti/ticket/src/ticket-roo/bin/database
+java -cp /Users/alagna/.m2/repository/com/h2database/h2/1.4.190/h2-1.4.190.jar org.h2.tools.Server -baseDir /Users/alagna/Documents/lavoro/clienti/biznology/progetti/ticket/src/ticket/bin/database
