@@ -28,6 +28,7 @@ import lombok.NoArgsConstructor;
 public class Subscription extends BusinessEntity {
 	
 	private Date date;
+	private String progressiveNumber;
 	
 	@OneToOne(cascade=CascadeType.ALL, fetch=FetchType.EAGER)
 	private Subscriber subscriber;
