@@ -1,0 +1,18 @@
+package it.whitebox.event.integration.db;
+
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.data.jpa.repository.JpaSpecificationExecutor;
+
+import it.whitebox.event.business.domain.Ticket;
+
+/**
+ * DAO for the Ticket
+ * 
+ * @author alberto.lagna@whitebox.it
+ */
+public interface TicketDao 
+	extends JpaRepository<Ticket, Long>, 
+	JpaSpecificationExecutor<Ticket>{
+	
+	public int countByPrintDay(String printDate);
+}
