@@ -5,8 +5,6 @@ TICKET SERVER release notes
 todo
 ------
 Backend
-- Ciao albi, per il software il biglietto accompagnatore mettiamo 2 euro
-
 - use org.h2.jdbcx.JdbcConnectionPool instead of BoneCP
 - better define SmNamingStrategy
 - refine GlobalExceptionHandler
@@ -18,6 +16,9 @@ Frontend
 
 v0.0.1 build 
 -----------------------------
+- implemented progressiveNumber on Ticket (automatically calculated) and on Subscription
+(automatically calculated if not set)
+- il biglietto accompagnatore mettiamo 2 euro
 - added the Purchase, Discount and (Revenue) concepts 
 - managed Subscription.progressiveNumber
 
